# auto-calibrate-stereo

./: CMakeLists.txt  README.md  calibrate.cpp
scripts/: calibrate.py
